// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DbStore Patch Test: after patch 1`] = `
Object {
  "createState": Object {
    "formModel": Object {
      "guestName": "gettext",
      "id": 0,
      "myVal": 4654320,
    },
  },
  "currentlyEditing": "",
  "fetching": Object {
    "0": false,
  },
  "formsToUpdate": Array [],
  "getFromServer": [Function],
  "getState": Object {
    "simpleTestCol": Object {
      "0": Object {
        "guestName": "get is now diff",
        "id": 0,
        "myVal": 65243,
      },
    },
  },
  "lastFetch": Object {
    "0": 1304605243337,
  },
  "removeState": Object {},
  "updateState": Object {
    "formModel0": Object {
      "guestName": "get is now diff",
      "id": 0,
      "myVal": 65243,
    },
  },
}
`;

exports[`DbStore Patch Test: createresult 1`] = `
Object {
  "guestName": "gettext",
  "id": 0,
  "myVal": 4654320,
}
`;

exports[`DbStore Patch Test: dbstore after create 1`] = `
Object {
  "createState": Object {
    "formModel": Object {
      "guestName": "gettext",
      "id": 0,
      "myVal": 4654320,
    },
  },
  "currentlyEditing": "",
  "fetching": Object {
    "0": false,
  },
  "formsToUpdate": Array [],
  "getFromServer": [Function],
  "getState": Object {
    "simpleTestCol": Object {
      "0": Object {
        "guestName": "gettext",
        "id": 0,
        "myVal": 4654320,
      },
    },
  },
  "lastFetch": Object {
    "0": 1304605243337,
  },
  "removeState": Object {},
  "updateState": Object {},
}
`;

exports[`DbStore Patch Test: dbstore after create get 1`] = `
Object {
  "createState": Object {
    "formModel": Object {
      "guestName": "gettext",
      "id": 0,
      "myVal": 4654320,
    },
  },
  "currentlyEditing": "",
  "fetching": Object {
    "0": false,
  },
  "formsToUpdate": Array [],
  "getFromServer": [Function],
  "getState": Object {
    "simpleTestCol": Object {
      "0": Object {
        "guestName": "gettext",
        "id": 0,
        "myVal": 4654320,
      },
    },
  },
  "lastFetch": Object {
    "0": 1304605243337,
  },
  "removeState": Object {},
  "updateState": Object {},
}
`;

exports[`DbStore Patch Test: dbstore after nothingtoget 1`] = `
Object {
  "createState": Object {},
  "currentlyEditing": "",
  "fetching": Object {
    "0": false,
  },
  "formsToUpdate": Array [],
  "getFromServer": [Function],
  "getState": Object {
    "simpleTestCol": Object {},
  },
  "lastFetch": Object {
    "0": 1304605243337,
  },
  "removeState": Object {},
  "updateState": Object {},
}
`;

exports[`DbStore Patch Test: dbstore after patch 1`] = `
Object {
  "createState": Object {
    "formModel": Object {
      "guestName": "gettext",
      "id": 0,
      "myVal": 4654320,
    },
  },
  "currentlyEditing": "",
  "fetching": Object {
    "0": false,
  },
  "formsToUpdate": Array [],
  "getFromServer": [Function],
  "getState": Object {
    "simpleTestCol": Object {
      "0": Object {
        "guestName": "get is now diff",
        "id": 0,
        "myVal": 65243,
      },
    },
  },
  "lastFetch": Object {
    "0": 1304605243337,
  },
  "removeState": Object {},
  "updateState": Object {
    "formModel0": Object {
      "guestName": "get is now diff",
      "id": 0,
      "myVal": 65243,
    },
  },
}
`;

exports[`DbStore Patch Test: dbstore after patch get 1`] = `
Object {
  "createState": Object {
    "formModel": Object {
      "guestName": "gettext",
      "id": 0,
      "myVal": 4654320,
    },
  },
  "currentlyEditing": "",
  "fetching": Object {
    "0": false,
  },
  "formsToUpdate": Array [],
  "getFromServer": [Function],
  "getState": Object {
    "simpleTestCol": Object {
      "0": Object {
        "guestName": "get is now diff",
        "id": 0,
        "myVal": 65243,
      },
    },
  },
  "lastFetch": Object {
    "0": 1304605243337,
  },
  "removeState": Object {},
  "updateState": Object {
    "formModel0": Object {
      "guestName": "get is now diff",
      "id": 0,
      "myVal": 65243,
    },
  },
}
`;

exports[`DbStore Patch Test: dbstore after wrongcol 1`] = `
Object {
  "createState": Object {},
  "currentlyEditing": "",
  "fetching": Object {
    "0": false,
  },
  "formsToUpdate": Array [],
  "getFromServer": [Function],
  "getState": Object {
    "simpleTestCol": Object {},
  },
  "lastFetch": Object {
    "0": 1304605243337,
  },
  "removeState": Object {},
  "updateState": Object {},
}
`;

exports[`DbStore Patch Test: dbstore at start 1`] = `
Object {
  "createState": Object {},
  "currentlyEditing": "",
  "fetching": Object {},
  "formsToUpdate": Array [],
  "getFromServer": [Function],
  "getState": Object {},
  "lastFetch": Object {},
  "removeState": Object {},
  "updateState": Object {},
}
`;

exports[`DbStore Patch Test: errorstore after wrongcol 1`] = `
Object {
  "0": NotFound {
    "className": "not-found",
    "code": 404,
    "constructor": [Function],
    "data": undefined,
    "errors": Object {},
    "message": "No record found for id '0'",
    "name": "NotFound",
    "type": "FeathersError",
  },
}
`;

exports[`DbStore Patch Test: getcreated 1`] = `
Object {
  "guestName": "gettext",
  "id": 0,
  "myVal": 4654320,
  Symbol(mobx administration): ObservableObjectAdministration$$1 {
    "defaultEnhancer": [Function],
    "keysAtom": Atom$$1 {
      "diffValue": 0,
      "isBeingObserved": false,
      "isPendingUnobservation": false,
      "lastAccessedBy": 0,
      "lowestObserverState": 2,
      "name": "DbStoreClass@3.getState.simpleTestCol.0.keys",
      "observers": Set {},
    },
    "name": "DbStoreClass@3.getState.simpleTestCol.0",
    "pendingKeys": Map {
      "isMobXObservableValue" => false,
      "isMobXObservableSet" => false,
      "isMobXObservableMap" => false,
      "then" => false,
      "$$typeof" => false,
      "nodeType" => false,
      "@@__IMMUTABLE_ITERABLE__@@" => false,
      "@@__IMMUTABLE_RECORD__@@" => false,
      "_isMockFunction" => false,
      "toJSON" => false,
    },
    "proxy": [Circular],
    "target": Object {
      "guestName": "gettext",
      "id": 0,
      "myVal": 4654320,
      Symbol(mobx administration): [Circular],
    },
    "values": Map {
      "guestName" => "gettext",
      "myVal" => 4654320,
      "id" => 0,
    },
  },
}
`;

exports[`DbStore Patch Test: getpatched 1`] = `
Object {
  "guestName": "get is now diff",
  "id": 0,
  "myVal": 65243,
}
`;

exports[`DbStore Patch Test: nothingtoget 1`] = `[NotFound: No record found for id '0']`;

exports[`DbStore Patch Test: patchresult 1`] = `
Object {
  "guestName": "get is now diff",
  "id": 0,
  "myVal": 65243,
}
`;

exports[`DbStore Patch Test: wrongcollection 1`] = `undefined`;
